--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Macerator</title>
 
     <link rel="stylesheet" type="text/css" href="style.css">
+
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
 </head>
 <body>
     <div>
