Add Macerator header

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <title>Macerator</title>
 
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway:900">
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
 </head>
 <body>
-    <div>
-
+    <div id="wrapper">
+        <div id="content">
+            <div id="header">
+                <img src="macerator.png" alt="">
+                <span>Macerator</span>
+            </div>
+        </div>
     </div>
 </body>
 </html>
