Added some text

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Macerator</title>
 
-    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Raleway:900">
+    <link href='https://fonts.googleapis.com/css?family=Raleway:900|Open+Sans:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="style.css">
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>
@@ -15,6 +15,11 @@
             <div id="header">
                 <img src="macerator.png" alt="">
                 <span>Macerator</span>
+            </div>
+
+            <div id="body">
+                <p>This is Macerator. We are a small community server, with a focus on PvE.</p>
+                <p>No items or mods are banned apart from Mystcraft and Morph flight.</p>
             </div>
         </div>
     </div>
