--- a/index.html
+++ b/index.html
@@ -17,7 +17,43 @@
         </div>
         <div id="content">
             <div id="body">
+                <h1>Hello</h1>
                 <p>This is Macerator. We are a small community server, with a focus on PvE.</p>
+                <ul>
+                    <li>Runs 24/7 on a decent server in Los Angeles. (Steady 20tps)</li>
+                    <li>Small, friendly community. :)</li>
+                    <li>No banned items or mods apart from Mystcraft and morph flight.</li>
+                </ul>
+
+                <h1>Rules</h1>
+                <ul>
+                    <li>No griefing or PvP</li>
+                    <li>No cheating or exploiting bugs</li>
+                    <li>Crazy machines that murder the server’s TPS, example: chicken farm that has 500 chickens on a single hopper that drops any excess eggs onto the ground to despawn.</li>
+                    <li>Respect all the players</li>
+                </ul>
+
+                <h1>Staff</h1>
+                <div class="the-staff">
+                    <div class="staff-member">
+                        <img src="//mcapi.ca/avatar/2d/mitchfizz05/80/true" alt=""><br>
+                        <span class="staff-member-username">Mitchfizz05</span><br>
+                        <span class="staff-member-title">Owner</span>
+                    </div>
+                    <div class="staff-member">
+                        <img src="//mcapi.ca/avatar/2d/dza6010/80/true" alt=""><br>
+                        <span class="staff-member-username">dza6010</span><br>
+                        <span class="staff-member-title">Administrator</span>
+                    </div>
+                </div>
+
+                <h1>Apply</h1>
+                <p>Applications are handled through the Minecraft Forums.</p>
+                <ul>
+                    <li><strong>Modpack:</strong> FTB Presents Direwolf20 <em>(version 1.8.0)</em></li>
+                    <li>Server IP will be PM'd to you via Minecraft Forums.</li>
+                </ul>
+                <a href="http://www.minecraftforum.net/forums/servers/pc-servers/2511954-macerator-small-modded-whitelist-server#reply" title="Apply for whitelist" target="_blank"><div class="button">Apply</div></a>
                 
             </div>
         </div>
