--- a/index.html
+++ b/index.html
@@ -1,4 +1,25 @@
 <!DOCTYPE html>
+<!--
+Copyright (c) 2015 Mitchfizz05 <me@mitchfizz05.net>
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+-->
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -54,7 +75,13 @@
                     <li>Server IP will be PM'd to you via Minecraft Forums.</li>
                 </ul>
                 <a href="http://www.minecraftforum.net/forums/servers/pc-servers/2511954-macerator-small-modded-whitelist-server#reply" title="Apply for whitelist" target="_blank"><div class="button">Apply</div></a>
-                
+
+                <footer>
+                    &copy; Copyright 2015 - Mitchfizz05. Website under <a href="LICENSE.txt">MIT license</a>.<br>
+                    <a href="https://github.com/">GitHub</a> |
+                    <a href="http://104.244.154.182/macerator/">World Downloads</a> |
+                    <a href="https://status.macerator.pw/">Server Status</a>
+                </footer>
             </div>
         </div>
     </div>
