--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@ THE SOFTWARE.
 
                 <footer>
                     &copy; Copyright 2015 - Mitchfizz05. Website under <a href="LICENSE.txt">MIT license</a>.<br>
+                    <a href="http://www.minecraftforum.net/forums/servers/pc-servers/2511954-macerator-small-modded-whitelist-server">Thread</a> |
                     <a href="https://github.com/">GitHub</a> |
                     <a href="http://104.244.154.182/macerator/">World Downloads</a> |
                     <a href="https://status.macerator.pw/">Server Status</a>
