Reworded the crazy laggy machine rule

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ THE SOFTWARE.
                 <ul>
                     <li>No griefing or PvP</li>
                     <li>No cheating or exploiting bugs</li>
-                    <li>Crazy machines that murder the server’s TPS, example: chicken farm that has 500 chickens on a single hopper that drops any excess eggs onto the ground to despawn.</li>
+                    <li>Keep machines civil. Try not to lag the server too much.</li>
                     <li>Respect all the players</li>
                 </ul>
 
